View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027969 | Open CASCADE | OCCT:Visualization | public | 2016-10-14 18:53 | 2016-12-09 16:38 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027969: Visualization - add interfaces to access selecting volumes from SelectMgr_SelectingVolumeManager | ||||
Description | It is necessary to have an interface to access current selecting volume for complex objects that are calculated during rendering. | ||||
Steps To Reproduce | N / A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27969 has been created by vpa. SHA-1: f186fd255763d23a5b1bfb783d8474c3ee3a2fba Detailed log of new commits: Author: vpa Date: Fri Oct 14 19:57:31 2016 +0300 0027969: Visualization - add interfaces to access selecting volumes from SelectMgr_SelectingVolumeManager - getter for selection frustum computed during last run of selection mechanism was added to SelectMgr_SelectingVolumeManager |
|
Dear Kirill, please review patch from branch CR27969. |
|
+ Standard_EXPORT Handle(SelectMgr_BaseFrustum) ActiveVolume() const Erroneous Standard_EXPORT within inline method. |
|
Branch CR27969 has been updated forcibly by vpa. SHA-1: 3829fe7eec1475b457fbd48b65d45883a7561adb |
|
Dear Kirill, the branch CR27969 was updated according to your remark. Please review. |
|
Please check compilation, regression testing is not needed. |
|
Dear BugMaster, Branch CR27969 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 3829fe7eec1475b457fbd48b65d45883a7561adb Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1134 |
|
Dear BugMaster, Branch CR27969 is TESTED. |
|
Branch CR27969_1 has been created by vpa. SHA-1: 74ee0c4a53768b5a1b3d99f54478a3310f0c7b9e Detailed log of new commits: Author: vpa Date: Tue Oct 18 18:31:26 2016 +0300 0027969: Visualization - add interfaces to access selecting volumes from SelectMgr_SelectingVolumeManager - getter for selection frustum computed during last run of selection mechanism was added to SelectMgr_SelectingVolumeManager; - getters for frustum planes were added to SelectMgr_BaseFrustum and its successors. |
|
Branch CR27969_1 has been updated forcibly by vpa. SHA-1: a19e9a783c67c73bb2f53fa1f4083126728b134a |
|
Branch CR27969_1 has been updated forcibly by vpa. SHA-1: d44ef50f97a808cba45f2a56bdd1e3a86264ad66 |
|
Dear Kirill, please review patch in branch CR27969_1. |
|
Please check compilation, regression testing is not needed. |
|
Branch CR27969_1 has been updated forcibly by mkv. SHA-1: 544c10addd9c1d81ac5a2b9608b3d34dce6c3cee |
|
Branch CR27969_1 has been updated forcibly by mkv. SHA-1: c5a8c0077d12e32606dd2bc0edec33010cabb497 |
|
Dear BugMaster, Branch CR27969_1 was rebased on current master of occt git-repository. SHA-1: c5a8c0077d12e32606dd2bc0edec33010cabb497 |
|
Dear BugMaster, Branch CR27969_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: c5a8c0077d12e32606dd2bc0edec33010cabb497 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1156 |
|
Dear BugMaster, Branch CR27969_1 is TESTED. |
|
Branch CR27969_1 has been deleted by kgv. SHA-1: c5a8c0077d12e32606dd2bc0edec33010cabb497 |
|
Branch CR27969 has been deleted by kgv. SHA-1: 3829fe7eec1475b457fbd48b65d45883a7561adb |
occt: master 871dcdc2 2016-10-19 16:11:23
Committer: apn Details Diff |
0027969: Visualization - add interfaces to access selecting volumes from SelectMgr_SelectingVolumeManager - getter for selection frustum computed during last run of selection mechanism was added to SelectMgr_SelectingVolumeManager; - getters for frustum planes were added to SelectMgr_BaseFrustum and its successors; - an API for applications to get frustum planes was added to SelectBasics_SelectingVolumeManager. |
Affected Issues 0027969 |
|
mod - src/SelectBasics/SelectBasics_SelectingVolumeManager.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_BaseFrustum.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_RectangularFrustum.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_RectangularFrustum.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_TriangularFrustum.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_TriangularFrustum.hxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_TriangularFrustumSet.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_TriangularFrustumSet.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-10-14 18:53 |
|
New Issue | |
2016-10-14 18:53 |
|
Assigned To | => kgv |
2016-10-14 18:53 |
|
Assigned To | kgv => vpa |
2016-10-14 18:53 |
|
Status | new => assigned |
2016-10-14 20:00 | git | Note Added: 0058748 | |
2016-10-14 20:00 |
|
Note Added: 0058749 | |
2016-10-14 20:00 |
|
Assigned To | vpa => kgv |
2016-10-14 20:00 |
|
Status | assigned => resolved |
2016-10-14 20:05 | kgv | Note Added: 0058750 | |
2016-10-14 20:05 | kgv | Assigned To | kgv => vpa |
2016-10-14 20:05 | kgv | Status | resolved => assigned |
2016-10-14 20:05 | kgv | Severity | feature => integration request |
2016-10-14 20:05 | kgv | Product Version | Unscheduled => |
2016-10-14 20:18 | git | Note Added: 0058751 | |
2016-10-14 20:19 |
|
Note Added: 0058752 | |
2016-10-14 20:19 |
|
Assigned To | vpa => kgv |
2016-10-14 20:19 |
|
Status | assigned => resolved |
2016-10-14 20:21 | kgv | Note Added: 0058753 | |
2016-10-14 20:21 | kgv | Assigned To | kgv => bugmaster |
2016-10-14 20:21 | kgv | Severity | integration request => tweak |
2016-10-14 20:21 | kgv | Status | resolved => reviewed |
2016-10-17 11:01 |
|
Assigned To | bugmaster => mkv |
2016-10-17 13:13 |
|
Note Added: 0058787 | |
2016-10-17 13:13 |
|
Note Added: 0058788 | |
2016-10-17 13:13 |
|
Assigned To | mkv => bugmaster |
2016-10-17 13:13 |
|
Status | reviewed => tested |
2016-10-17 13:13 |
|
Test case number | => Not needed |
2016-10-18 18:35 | git | Note Added: 0058865 | |
2016-10-18 18:36 |
|
Assigned To | bugmaster => vpa |
2016-10-18 18:36 |
|
Status | tested => assigned |
2016-10-18 19:52 | git | Note Added: 0058867 | |
2016-10-19 19:13 | git | Note Added: 0058905 | |
2016-10-19 19:14 |
|
Note Added: 0058906 | |
2016-10-19 19:14 |
|
Assigned To | vpa => kgv |
2016-10-19 19:14 |
|
Status | assigned => resolved |
2016-10-20 12:43 | kgv | Note Added: 0058917 | |
2016-10-20 12:43 | kgv | Assigned To | kgv => bugmaster |
2016-10-20 12:43 | kgv | Status | resolved => reviewed |
2016-10-20 18:28 | git | Note Added: 0058935 | |
2016-10-20 18:28 |
|
Assigned To | bugmaster => mkv |
2016-10-21 14:57 | git | Note Added: 0058969 | |
2016-10-24 14:35 |
|
Note Added: 0059019 | |
2016-10-24 14:35 |
|
Note Added: 0059020 | |
2016-10-24 14:35 |
|
Note Added: 0059021 | |
2016-10-24 14:35 |
|
Assigned To | mkv => bugmaster |
2016-10-24 14:35 |
|
Status | reviewed => tested |
2016-10-28 14:35 | apn | Changeset attached | => occt master 871dcdc2 |
2016-10-28 14:35 | apn | Assigned To | bugmaster => apn |
2016-10-28 14:35 | apn | Status | tested => verified |
2016-10-28 14:35 | apn | Resolution | open => fixed |
2016-10-28 21:37 | git | Note Added: 0059417 | |
2016-10-28 21:42 | git | Note Added: 0059478 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |