0027969: Visualization - add interfaces to access selecting volumes from SelectMgr_SelectingVolumeManager

- getter for selection frustum computed during last run of selection mechanism was added to SelectMgr_SelectingVolumeManager